@@ -1,3 +1,10 @@
+2008-08-13  Arno Rehn  <arno@arnorehn.de>
+
+    * Make the KSharedPointer marshaller more generic and add one for
+      KSharedPtr<KMimeType>.
+    * Parse the main mono config after the domain was initialized. This
+      fixes some libs being not found (like libc).
+
 2008-08-05  Richard Dale  <richard.j.dale@gmail.com>
 
 	* Make KApplication and KUniqueApplication partial classes and add the
